refactor response from service to controller is dtos
